--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"homepage": "http://vvchennnnn.github.io/react-weather-app",
-	"name": "weather-app",
+	"name": "react-weather-app",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
